--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "SDMX"
 uuid = "01234567-89ab-cdef-0123-456789abcdef"
-authors = ["Your Name <your@email.com>"]
+authors = ["Giulio Valentino Dalla Riva <me@gvdallariva.net>"]
 version = "0.1.0"
 
 [deps]
@@ -13,8 +13,16 @@ JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[weakdeps]
 XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
-XML = "72c71f33-b9b6-44de-8c94-c961784809e2"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
+
+[extensions]
+SDMXExcelExt = "XLSX"
+SDMXPlotsExt = "Plots"
+SDMXStatsPlotsExt = ["Plots", "StatsPlots"]
 
 [compat]
 Test = "1.11.0"
