--- a/Project.toml
+++ b/Project.toml
@@ -25,4 +25,20 @@ SDMXPlotsExt = "Plots"
 SDMXStatsPlotsExt = ["Plots", "StatsPlots"]
 
 [compat]
-Test = "1.11.0"
+Aqua = "0.8"
+CSV = "0.10"
+DataFrames = "1"
+EzXML = "1"
+HTTP = "1"
+JSON3 = "1"
+Statistics = "1"
+StatsBase = "0.34"
+Test = "1"
+julia = "1.11"
+
+[extras]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Aqua", "Test"]
