--- a/Project.toml
+++ b/Project.toml
@@ -12,12 +12,11 @@ HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [weakdeps]
-XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
+XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
 
 [extensions]
 SDMXExcelExt = "XLSX"
@@ -28,12 +27,16 @@ SDMXStatsPlotsExt = ["Plots", "StatsPlots"]
 Aqua = "0.8"
 CSV = "0.10"
 DataFrames = "1"
+Dates = "1"
 EzXML = "1"
 HTTP = "1"
 JSON3 = "1"
+Plots = "1"
 Statistics = "1"
 StatsBase = "0.34"
+StatsPlots = "0.15"
 Test = "1"
+XLSX = "0.10"
 julia = "1.11"
 
 [extras]
