--- a/Project.toml
+++ b/Project.toml
@@ -14,12 +14,10 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [weakdeps]
-Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 
 [extensions]
-SDMXPlotsExt = "Plots"
-SDMXStatsPlotsExt = ["Plots", "StatsPlots"]
+SDMXStatsPlotsExt = "StatsPlots"
 
 [compat]
 Aqua = "0.8"
@@ -29,7 +27,6 @@ Dates = "1"
 EzXML = "1"
 HTTP = "1"
 JSON3 = "1"
-Plots = "1"
 Statistics = "1"
 StatsBase = "0.34"
 StatsPlots = "0.15"
